hphp/hack/test/typecheck/construct_consist1.php.exp
File "construct_consist1.php", line 6, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4041])
File "construct_consist1.php", line 6, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "construct_consist1.php", line 8, characters 19-29:
Member __construct has the wrong type
File "construct_consist1.php", line 8, characters 19-29:
Too many mandatory arguments
File "construct_consist1.php", line 4, characters 7-8:
Because of this definition
